fixed wrong menu behaviour on mobile

--- a/site/themes/automato/static/less/styles.less
+++ b/site/themes/automato/static/less/styles.less
@@ -233,7 +233,6 @@ a:hover {
 
     &.affix {
         padding-top: 30px;
-
         .navbar-header {
             height: 60px;
         }
@@ -249,9 +248,10 @@ a:hover {
         }
 
         &.affix {
+          padding-top: 0px;
             .navbar-header {
-                padding-top: 31px;
-                height: 75px;
+                padding-top: 12px;
+                height: 60px;
             }
         }
     }
